[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Weapons/sword.png" type="Texture" id=1]
[ext_resource path="res://Textures/UI/heart_full.png" type="Texture" id=2]
[ext_resource path="res://Textures/Interactables/key.png" type="Texture" id=3]
[ext_resource path="res://Textures/Interactables/Potion.png" type="Texture" id=4]
[ext_resource path="res://Textures/Interactables/Coin.tres" type="Texture" id=5]
[ext_resource path="res://Textures/GorgeousPixel-BWO85.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 13
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 13
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_right = 0.5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCounter" type="GridContainer" parent="."]
margin_left = 36.0
margin_top = 2.0
margin_right = 107.0
margin_bottom = 40.0
custom_constants/vseparation = -1
custom_constants/hseparation = -1
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="TextureRect" parent="HealthCounter"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="Heart2" type="TextureRect" parent="HealthCounter"]
margin_left = 15.0
margin_right = 31.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="Heart3" type="TextureRect" parent="HealthCounter"]
margin_left = 30.0
margin_right = 46.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="CurrentWeapon" type="TextureRect" parent="."]
anchor_right = 0.101
anchor_bottom = 0.191
margin_right = 2.912
margin_bottom = 1.058
rect_rotation = 45.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupCounters" type="VBoxContainer" parent="."]
anchor_top = 0.198
anchor_right = 0.087
anchor_bottom = 0.506
margin_top = -0.076004
margin_right = -0.0560017
margin_bottom = 0.0279922
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="HBoxContainer" parent="PickupCounters"]
margin_right = 25.0
margin_bottom = 16.0
custom_constants/separation = 6
alignment = 2

[node name="Coin" type="TextureRect" parent="PickupCounters/Coins"]
margin_left = 4.0
margin_right = 12.0
margin_bottom = 16.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="CoinCounter" type="Label" parent="PickupCounters/Coins"]
margin_left = 18.0
margin_right = 25.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Keys" type="HBoxContainer" parent="PickupCounters"]
margin_top = 17.0
margin_right = 25.0
margin_bottom = 33.0
custom_constants/separation = 6
alignment = 2

[node name="Key" type="TextureRect" parent="PickupCounters/Keys"]
margin_left = 4.0
margin_right = 12.0
margin_bottom = 16.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="KeyCounter" type="Label" parent="PickupCounters/Keys"]
margin_left = 18.0
margin_right = 25.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Potions" type="HBoxContainer" parent="PickupCounters"]
margin_top = 34.0
margin_right = 25.0
margin_bottom = 50.0
custom_constants/separation = 2
alignment = 2

[node name="Potion" type="TextureRect" parent="PickupCounters/Potions"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="PotionCounter" type="Label" parent="PickupCounters/Potions"]
margin_left = 18.0
margin_right = 25.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "0"
